[package]
name = "mmjab"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
tokio = { version = "*", features = ["macros", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tokio-postgres = { version = "0.7.12", features= ["runtime","array-impls","js","with-bit-vec-0_6", "with-chrono-0_4"] }
log = {version = "0.4.25", features = ["std","serde"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["env"] }
env_logger = "0.11.6"
dotenv = { version = "0.15.0", features = ["clap", "cli"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
